# aws-batch-inference-processing

./: .gitignore  COST-INPUT.md  README.md  cdk.json  main.py  makefile  package-lock.json  package.json  pyproject.toml  pytest.ini
example/: TEST_INVOKE_GUIDE.md  sample_data.csv  test_regular_invoke.py  test_results.csv
lambda/: Dockerfile  custom_types.py  get_batch_inference_job.py  postprocess.py  preprocess.py  processor.py  prompt_templates.py  requirements.txt  start_batch_inference_job.py  utils.py
lambda/tests/: test_postprocess.py  test_preprocess.py  test_preprocess_validation.py  test_processor.py  test_utils.py
lib/: bedrock-batch-inference-stack.ts
scripts/: download_results.sh
test/: bedrock-batch-inference-processing-stack.test.ts  bedrock-batch-orchestrator-stack.test.ts
