[project]
name = "aws-batch-inference-processing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.0"
dependencies = [
    "boto3>=1.40.40",
    "pandas>=2.3.2",
    "pydantic>=2.11.9",
    "pytest>=8.4.2",
    "ruff>=0.13.2",
    "tqdm>=4.67.1",
    "typing-extensions>=4.15.0",
]
